[gd_scene load_steps=15 format=2]

[ext_resource path="res://3D models/Scenes/BrownTrout.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Pred.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0, 0, 0, 36, 24, -48, -36, 24, -48, -36, -24, -48, 36, -24, -48 )

[sub_resource type="SphereShape" id=2]
radius = 12.0

[sub_resource type="SphereShape" id=3]
radius = 2.5

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0.0917404, 1.57257, -0.311133, -0.0265629, 1.09925, -2.08574, 0.0325714, 1.09925, -2.08574, -0.0265629, 2.16409, -1.19803, -0.0911284, 1.06687, 0.0477291, 0.0974649, 1.0649, 0.0515558, 0.0917404, 2.10478, -1.19803, -0.0857319, 2.10478, -1.0213, -0.0857319, 1.09925, -2.02636, 0.0917404, 1.09925, -1.67148, -0.0265629, 1.33607, -0.0152299, 0.0325714, 2.16409, -1.0213, -0.0857319, 1.92727, -0.666014, 0.0917404, 1.33607, -1.78984, -0.0857319, 2.04568, -1.25741, 0.0325714, 1.15845, -2.08574, -0.0265629, 1.15845, -2.08574, 0.0917404, 2.04568, -0.902939, -0.0857319, 1.27686, -0.0152299, 0.0325714, 1.33607, -0.0152299, 0.0917404, 1.69077, -0.429494, 0.0325714, 2.16409, -1.19803 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -0.381455, -1.20789, -1.43464, 0.328208, -1.20789, -1.43464, -0.0265455, 1.09925, -2.08574, -0.72746, 0.0807719, -0.11621, 0.0856879, -1.13216, -0.0929012, 0.397314, 0.287496, -2.25053, 0.724626, -0.0277913, -0.12931, -0.393229, -0.186257, -2.25529, -0.484783, 0.892573, -0.0505899, 0.029882, -0.946844, -2.28027, -0.343783, 0.559246, -2.26559, -0.456911, -0.838863, -0.116176, 0.366486, -0.977499, -0.0793329, 0.455391, 0.770875, -0.98554, 0.450052, -0.0282085, -2.14537, -0.136656, 1.0361, -0.079999, 0.298874, 0.618374, -2.27481, 0.488104, 0.887648, -0.0565601, -0.244664, -0.74248, -2.29956, 0.247777, -0.734835, -2.28732, -0.322356, -1.20789, -0.725166, -0.443299, -0.0282601, -2.19592, -0.449069, 0.770047, -1.03907, 0.328208, -1.20789, -0.784462, 0.0914973, 1.09925, -1.67159, -0.0799223, 0.748036, -2.30515, 0.615543, 0.0254126, -1.09199, -0.085645, 1.09925, -2.02644, -0.658058, 0.0777348, -0.722475, 0.142179, 1.03346, -0.0827082, -0.080068, -1.13532, -0.0896632, 0.726677, 0.079516, -0.12627, 0.351996, 0.61713, -2.11148, 0.0323977, 1.09925, -2.08574, -0.701423, -0.080215, -0.154783, -0.65231, -0.0282981, -0.726613, 0.458594, -0.831726, -0.126021, -0.024183, -0.952346, -2.28694, 0.467323, 0.847296, -0.597367, -0.443923, 0.0769612, -2.19732, -0.298338, -1.01313, -0.102568, -0.610511, 0.505787, -0.184809, 0.085508, 0.745354, -2.30145, 0.62932, 0.463115, -0.108819, 0.194764, -0.794625, -2.29522, -0.460218, 0.844887, -0.653386, 0.659367, 0.129361, -0.620663, -0.381455, -1.20789, -1.25721, 0.395129, -0.184935, -2.2447, -0.348336, 0.621374, -2.11725, -0.702886, -0.0283696, -0.309644, 0.507659, 0.0252096, -1.83573, -0.294001, 0.620631, -2.27842, -0.395209, 0.290759, -2.26057, -0.397008, 0.665838, -1.6784 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.328388, -1.20796, -0.784375, 0.387481, -1.91771, -1.55324, 0.328388, -1.79938, -1.49407, 0.387481, -1.20796, -1.43489, 0.150933, -1.20796, -1.19827, 0.505843, -1.85851, -1.43489, 0.210096, -1.32629, -0.784375, 0.269259, -1.32629, -1.49407, 0.505843, -1.68106, -1.55324, 0.387481, -1.20796, -0.902725, 0.328388, -1.79938, -1.31662, 0.150933, -1.26716, -1.02099, 0.269259, -1.26716, -0.725119, 0.210096, -1.20796, -0.725119, 0.446645, -1.91771, -1.43489, 0.505843, -1.91771, -1.55324, 0.387481, -1.32629, -0.902725, 0.269259, -1.50374, -1.49407, 0.210096, -1.20796, -1.37572, 0.387481, -1.5628, -1.55324, 0.387481, -1.26716, -1.49407, 0.150933, -1.26716, -1.19827 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -0.204058, -1.20796, -0.725119, -0.499834, -1.91771, -1.55324, -0.381461, -1.91771, -1.55324, -0.381461, -1.20796, -1.43489, -0.144924, -1.20796, -1.19827, -0.381461, -1.20796, -0.902725, -0.263262, -1.32629, -1.49407, -0.204058, -1.32629, -0.784375, -0.499834, -1.68106, -1.55324, -0.440665, -1.74018, -1.25745, -0.322362, -1.79938, -1.31662, -0.322362, -1.26716, -0.784375, -0.499834, -1.74018, -1.37572, -0.144924, -1.26716, -1.19827, -0.440665, -1.91771, -1.43489, -0.322362, -1.79938, -1.49407, -0.144924, -1.26716, -1.08017, -0.204058, -1.20796, -1.37572, -0.263262, -1.26716, -0.725119, -0.381461, -1.5628, -1.55324, -0.381461, -1.26716, -1.49407 )

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( 0.505924, 0.62576, 2.70579, 0.446772, -1.62199, 1.52318, 0.860741, -0.0252268, 0.339842, 0.395157, 0.939223, 0.0435473, 0.387574, -0.0843379, 3.53405, 0.742438, -0.0843379, 2.29184, 0.68324, -1.38529, 1.52318, 0.389174, -0.966858, -0.0028259, 0.565075, 0.862459, -0.0152299, 0.860741, 0.0343939, 1.10887, 0.801589, -0.0843379, -0.0152299, 0.387574, 0.389315, 3.59329, 0.505924, 0.92157, 1.64165, 0.624181, -0.261671, 2.94239, 0.565075, -1.62199, 1.64165, 0.565075, 0.448427, 3.00163, 0.505924, -0.911894, -0.0152299, 0.387574, -1.14859, 1.99565, 0.624181, 0.803348, 0.517199, 0.742438, -1.03037, 1.52318, 0.401252, 0.84976, 1.76318, 0.565075, 0.803348, 1.75977, 0.446772, 0.330204, 3.65253, 0.801589, 0.0343939, 1.87753, 0.446772, -0.0843379, 3.53405, 0.860741, 0.0935051, 0.399081, 0.505924, 0.980936, 0.0440085, 0.387574, -0.379639, 3.23822, 0.565075, -1.62199, 1.52318, 0.68324, -1.38529, 1.46394, 0.68324, 0.0343939, 2.64655, 0.742438, 0.389315, 0.0440085, 0.860741, 0.0935051, 0.872271, 0.565075, 0.92157, 0.931509, 0.801589, 0.0935051, 1.75977, 0.446772, -0.379639, 3.23822, 0.860741, -0.0252268, 1.10887, 0.400389, 0.910438, 1.25971, 0.446772, -0.971259, -0.0152299, 0.565075, 0.92157, 0.103247, 0.801589, 0.0935051, -0.0152299, 0.860741, -0.0843379, 0.458319, 0.801589, -0.0252268, 1.87753, 0.446772, 0.389315, 3.59329, 0.446772, 0.152616, 3.65253, 0.505924, 0.744237, 2.35072, 0.565075, 0.744237, 1.99565 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( 0.0149569, 0.628745, 3.39084, 0.370645, 0.949651, 0.0450692, -0.527285, 0.815342, 0.200901, 0.355617, -0.986322, 0.0991604, 0.337587, -0.308578, 3.48162, -0.413823, 0.059225, 3.46573, -0.499695, -0.971086, -0.014796, -0.808252, 0.0187205, 0.480003, 0.555196, 0.315618, 2.46564, -0.0122482, 1.37761, -0.169206, -0.0857551, -0.320464, 4.36208, -0.474924, 0.658786, 2.39067, -0.440474, -1.62199, 1.64162, -0.736336, -1.08941, 1.52349, 0.286021, 0.456453, 3.48905, 0.327058, -0.840084, 1.85665, 0.349213, 0.909846, 1.62033, -0.669648, -0.0444149, 2.33128, 0.0212865, 0.195715, 4.27156, 0.220469, -0.519924, 3.45895, -0.747887, 0.125014, 0.172942, -0.477884, 0.832048, 1.68768, 0.387528, 0.211837, -0.014796, -0.314146, 0.3923, 3.57509, -0.558916, -1.62199, 1.64162, 0.0707989, -1.14133, 0.127493, 0.0151007, 0.850425, 2.61771, -0.786596, 0.0115092, 1.33483, 0.349792, 0.132781, 3.67495, -0.519173, 0.320535, 2.95615, -0.677115, -1.38535, 1.52349, -0.558085, -0.247336, 2.82694, -0.523423, 0.854927, 0.543732, 0.330585, -0.575468, 2.92826, -0.260568, 0.233392, 3.90855, 0.068914, -0.25497, 4.2111, 0.33139, -0.952868, 1.04688, 0.0158562, 1.01982, 1.8432, 0.0173451, 0.413232, 3.96019, -0.440474, -1.62199, 1.52349, 0.354979, 0.303905, 3.63275, 0.340074, 0.728787, 2.39416, -0.151766, 1.0017, 1.63011, -0.0426589, 0.837141, 2.61233, -0.619679, -0.0439496, 2.64061, 0.116553, -0.522775, 3.63023, -0.206649, 0.502408, 3.47233, 0.332593, -0.900471, 1.47594, -0.739565, -0.0929102, 0.205798, -0.484285, 0.913977, 0.169729, 0.348598, 0.964033, 0.789119, -0.0365068, 0.193537, 4.25933, 0.291293, 0.186591, 3.83362, -0.800556, 0.0702832, 0.556993, 0.288551, -0.310035, 3.6596, 0.0201945, 0.0812634, 4.31946, -0.0403936, 0.407251, 3.94226, 0.282973, 0.289696, 3.80778, 0.0135657, -0.309975, 4.26419, -0.516177, 0.366871, 2.89657, -0.714845, -0.0460102, 1.97591, -0.0973453, -1.1266, 0.159068, 0.355452, 0.977414, 0.267415, 0.323681, -0.782856, 2.1241 )

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( -0.0264413, -0.971259, -4.33332, -0.144745, -0.438808, -4.86565, -0.440677, -0.202201, -2.38177, 0.269143, -0.793718, -2.38177, 0.15084, 0.448206, -4.86565, -0.381351, 0.625748, -2.38177, -0.0855929, 0.744052, -4.39266, 0.446685, -0.0838978, -2.61839, 0.15084, -0.379569, -4.86565, -0.0855929, -0.971259, -2.38177, -0.144745, 0.448206, -4.86565, 0.0916883, 0.803464, -2.38177, 0.387447, 0.56651, -2.38177, -0.203896, -0.912021, -2.97344, -0.440677, 0.0342318, -2.73682, 0.15084, -0.971259, -3.26915, -0.203896, 0.0932965, -4.74747, 0.209992, -0.0250068, -4.68837, 0.446685, 0.270838, -2.44111, -0.0855929, 0.803464, -2.5593, -0.3222, -0.675414, -2.44111, 0.328295, 0.625748, -2.61839, 0.0325366, -0.971259, -4.33332, -0.440677, 0.329903, -2.44111, -0.0855929, -0.971259, -4.09671, 0.209992, -0.912021, -2.91434, -0.0245239, 0.745682, -4.17663, 0.446685, -0.142963, -2.38177, 0.446685, 0.0932965, -2.67773, 0.0916883, -0.971259, -2.38177, 0.0916883, -0.497873, -4.86565, 0.328295, -0.616176, -2.5002, 0.209992, 0.744052, -2.44111, 0.0916883, -0.971259, -3.91942, -0.440677, -0.0838978, -2.67773, -0.203896, -0.0250068, -4.74747, 0.387447, 0.56651, -2.5002, -0.263048, -0.793718, -2.38177, -0.381351, 0.625748, -2.44111, 0.0916883, 0.507445, -4.86565, 0.209992, 0.0932965, -4.68837, -0.203896, 0.744052, -2.38177, -0.440677, -0.202201, -2.44111, -0.144745, -0.971259, -3.32824, -0.0855929, -0.497873, -4.86565, -0.0855929, 0.507445, -4.86565, 0.446685, -0.142963, -2.5002, 0.446685, 0.2116, -2.5593, 0.0916883, 0.803464, -2.5002 )

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( 0.0325656, -0.971335, -2.73647, -0.0265571, -1.74031, -4.09688, -0.0857087, -1.6219, -4.15597, 0.0325656, -0.971335, -4.33357, -0.144889, -0.971335, -2.91422, 0.150898, -1.14882, -3.09166, 0.0917173, -1.68107, -4.09688, -0.0857087, -0.971335, -4.09688, 0.150898, -0.971335, -3.2691, -0.0265571, -1.50358, -3.50563, -0.144889, -1.20799, -3.15075, -0.0265571, -1.32631, -4.33357, 0.0917173, -1.14882, -4.09688, 0.0917173, -1.68107, -3.91944, 0.0325656, -1.0305, -2.73647, -0.0857087, -1.68107, -3.91944, -0.144889, -0.971335, -3.32819, -0.0857087, -1.14882, -4.21522, 0.0917173, -1.44441, -3.44654, 0.150898, -0.971335, -2.91422, -0.0265571, -1.0305, -2.73647, 0.0325656, -1.32631, -4.33357, 0.0325656, -1.74031, -3.97854, -0.0265571, -0.971335, -4.33357, -0.144889, -1.20799, -3.32819, 0.0917173, -0.971335, -3.97854, -0.0857087, -1.44441, -3.44654 )

[sub_resource type="ConvexPolygonShape" id=12]
points = PoolVector3Array( -0.144889, -0.379639, -5.45793, -0.0857087, 1.15841, -6.58149, 0.0917173, -0.912056, -6.58149, 0.0917173, 1.15841, -6.52239, 0.150898, -0.379639, -4.86633, -0.0857087, -0.971259, -6.6997, -0.144889, -0.497838, -4.92562, -0.144889, 0.507584, -4.92562, 0.150898, 0.448172, -4.86633, 0.0917173, 1.0992, -6.04917, 0.0325656, -0.793648, -6.75918, 0.0917173, -0.852852, -5.98988, 0.150898, 0.330181, -5.39883, -0.0857087, 1.0992, -6.04917, -0.144889, 0.388968, -5.51704, -0.144889, -0.438842, -4.86633, 0.150898, -0.497838, -5.04383, -0.0857087, -0.852852, -5.93078, -0.0857087, 0.744191, -6.6406, -0.144889, 0.448172, -4.86633, 0.150898, -0.0838283, -5.39883, 0.0917173, -0.912056, -6.22649, -0.0265571, -0.793648, -6.75918, -0.144889, 0.566788, -5.28043, -0.0857087, 1.15841, -6.34488, 0.150898, 0.507584, -5.22133, -0.0857087, -0.912056, -6.16738, 0.150898, -0.438842, -5.22133 )

[node name="BrownTrout" type="KinematicBody"]
script = ExtResource( 2 )
movement_speed = 0.5
creature_level = 5
animations_path = NodePath("BrownTrout")

[node name="BrownTrout" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="VisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="VisionArea"]
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="VisionArea"]
shape = SubResource( 2 )

[node name="AttackArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.61395 )

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.457321 )
shape = SubResource( 3 )

[node name="Vision" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.48576 )
enabled = true

[node name="DownRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.11, 0 )

[node name="ForwardRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -20 )
debug_shape_custom_color = Color( 0.682353, 0.0627451, 0.0627451, 1 )
debug_shape_thickness = 5

[node name="CollisionShape9" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape8" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 5 )

[node name="CollisionShape7" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="CollisionShape6" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="CollisionShape5" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 8 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 9 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 10 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 12 )

[node name="LocalTarget" type="Spatial" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
